--- a/residue.ipynb
+++ b/residue.ipynb
@@ -7,7 +7,7 @@
     "# Residue Hyperdimensional Computing\n",
     "\n",
     "In this notebook we implement Kymn et al. (2023), \n",
-    "*Computing with Residue Numbers in High-Dimensional Representation*."
+    "[*Computing with Residue Numbers in High-Dimensional Representation*](https://arxiv.org/abs/2311.04872)."
    ]
   },
   {
