Implemented codebook decoding

--- a/resonator.ipynb
+++ b/resonator.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "Resonator networks are a recent development in Vector Symbolic Architectures\n",
     "which allow for efficient factorization of composite symbols into their \n",
-    "component parts."
+    "component parts.\n",
+    "\n",
+    "For more information, check out\n",
+    "> E. P. Frady, S. J. Kent, B. A. Olshausen and F. T. Sommer, \"Resonator Networks, 1: An Efficient Solution for Factoring High-Dimensional, Distributed Representations of Data Structures,\" in Neural Computation, vol. 32, no. 12, pp. 2311-2331, Dec. 2020, doi: 10.1162/neco_a_01331."
    ]
   },
   {
